workspace-sf/force-app/main/default/objects/OfertaRemuneracaoProduto__c/OfertaRemuneracaoProduto__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar as remunerações dos produtos das Ofertas.</description>
    <label>Oferta de Remuneração de Produto</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Numero</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ofertas de Remunerações de Produto</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>