workspace-sf/force-app/main/default/objects/OfertaRemuneracaoProduto__c/fields/Formula__c.field-meta.xml
<CustomField>
    <fullName>Formula__c</fullName>
    <label>Fórmula</label>
    <length>255</length>
    <type>Text</type>
</CustomField>