workspace-sf/force-app/main/default/objects/OfertaRemuneracaoProduto__c/fields/NomeRemuneracao__c.field-meta.xml
<CustomField>
    <fullName>NomeRemuneracao__c</fullName>
    <formula>RemuneracaoProduto__r.TipoRemuneracao__r.Name</formula>
    <label>Tipo da Remuneração</label>
    <type>Text</type>
</CustomField>