workspace-sf/force-app/main/default/objects/OfertaRemuneracaoProduto__c/fields/Obrigatoria__c.field-meta.xml
<CustomField>
    <fullName>Obrigatoria__c</fullName>
    <formula>RemuneracaoProduto__r.Obrigatoria__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Obrigatoria</label>
    <type>Checkbox</type>
</CustomField>