workspace-sf/force-app/main/default/objects/OfertaRemuneracaoProduto__c/fields/Oferta__c.field-meta.xml
<CustomField>
    <fullName>Oferta__c</fullName>
    <label>Oferta</label>
    <referenceTo>Oferta__c</referenceTo>
    <relationshipLabel>Ofertas de Remunerações de Produto</relationshipLabel>
    <relationshipName>OfertasRemuneracoesProduto</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>