workspace-sf/force-app/main/default/objects/OfertaRemuneracaoProduto__c/fields/Percentual__c.field-meta.xml
<CustomField>
    <fullName>Percentual__c</fullName>
    <label>Percentual</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>