workspace-sf/force-app/main/default/objects/OfertaRemuneracaoProduto__c/fields/TipoCadastro__c.field-meta.xml
<CustomField>
    <fullName>TipoCadastro__c</fullName>
    <label>Tipo de cadastro da remuneração</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percentual</fullName>
            </value>
            <value>
                <fullName>Formula</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>