workspace-sf/force-app/main/default/objects/OfertaRemuneracaoProduto__c/validationRules/ImpedeAlterarRemuneracaoObrigatoria.validationRule-meta.xml
<ValidationRule>
    <fullName>ImpedeAlterarRemuneracaoObrigatoria</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISCHANGED(RemuneracaoProduto__c ),
PRIORVALUE( Obrigatoria__c ))</errorConditionFormula>
    <errorDisplayField>RemuneracaoProduto__c</errorDisplayField>
    <errorMessage>Remuneração obrigatória não pode ser alterada.</errorMessage>
</ValidationRule>