workspace-sf/force-app/main/default/objects/OfertaRemuneracaoProduto__c/validationRules/ValidaFormulaTipoCadastro.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidaFormulaTipoCadastro</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
        ISPICKVAL( TipoCadastro__c , &quot;Formula&quot;),
        OR(
												    ISNULL( Formula__c ),
												    Formula__c = &quot;&quot;
								)
)</errorConditionFormula>
    <errorDisplayField>Formula__c</errorDisplayField>
    <errorMessage>Formula deve ser preenchido com o ID da questão do questionário.</errorMessage>
</ValidationRule>