workspace-sf/force-app/main/default/objects/OfertaRemuneracaoProduto__c/validationRules/ValidaPercentualInformado.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidaPercentualInformado</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				NOT(ISBLANK(Percentual__c)),
				IF( 
				    Percentual__c &lt;=  RemuneracaoProduto__r.LimiteMaximo__c  &amp;&amp; 
				    Percentual__c &gt;= RemuneracaoProduto__r.LimiteMinimo__c,
				    false, true
				   )
   )</errorConditionFormula>
    <errorDisplayField>Percentual__c</errorDisplayField>
    <errorMessage>O percentual Informado deve estar entre os limites de capital cadastrados na garantia do produto
associada.</errorMessage>
</ValidationRule>