workspace-sf/force-app/main/default/objects/OfertaRemuneracaoProduto__c/validationRules/ValidaPercentualTipoCadastro.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidaPercentualTipoCadastro</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
				    ISPICKVAL( TipoCadastro__c , &quot;Percentual&quot;),
				    ISNULL( Percentual__c ) 
)</errorConditionFormula>
    <errorDisplayField>Percentual__c</errorDisplayField>
    <errorMessage>Percentual deve ser preenchido.</errorMessage>
</ValidationRule>