workspace-sf/force-app/main/default/objects/OfertaRemuneracaoProduto__c/validationRules/ValidaProdutoOferta.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidaProdutoOferta</fullName>
    <active>true</active>
    <errorConditionFormula>IF( RemuneracaoProduto__r.Produto__c = Oferta__r.Produto__c , False, True)</errorConditionFormula>
    <errorDisplayField>RemuneracaoProduto__c</errorDisplayField>
    <errorMessage>A Remuneração selecionada não pertence ao produto selecionado na oferta.</errorMessage>
</ValidationRule>