workspace-sf/force-app/main/default/objects/OfertaRemuneracaoProduto__c/listViews/Filtrado.listView-meta.xml
<ListView>
    <fullName>Filtrado</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>TipoCadastro__c</columns>
    <columns>Formula__c</columns>
    <columns>Oferta__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Oferta__c</field>
        <operation>equals</operation>
        <value>Brasil Ouro</value>
    </filters>
    <filters>
        <field>TipoCadastro__c</field>
        <operation>equals</operation>
        <value>Formula</value>
    </filters>
    <label>Filtrado</label>
</ListView>